--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ Changelog = "https://github.com/derphilipp/python_example/releases"
 python = "^3.9"
 click = ">=8.0.1"
 pre-commit = "^3.6.0"
+flask = "^3.0.0"
+requests = "^2.31.0"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
@@ -48,6 +50,10 @@ myst-parser = {version = ">=0.16.1"}
 
 [tool.poetry.scripts]
 python_example = "python_example.__main__:main"
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.1.0"
+mypy = "^1.7.1"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
