--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ Changelog = "https://github.com/derphilipp/python_example/releases"
 python = "^3.9"
 click = ">=8.0.1"
 pre-commit = "^3.6.0"
+pyqt6 = "^6.6.1"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
